src/objects/FieloPLT__Transaction__c.object
<CustomObject>
    <description>Actions that grant Points, Badges o Rewards to Members in exchange of a specific actions performed</description>
    <fields>
        <fullName>FieloPLT__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically generated related Action.</description>
        <label>Action</label>
        <referenceTo>FieloPLT__Action__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In case of approval process behind transactions, here is the approval</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>Transaction date and time.</description>
        <inlineHelpText>Enter date and time of this transaction.</inlineHelpText>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>FieloPLT__Event__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Member that generated the Transaction.</description>
        <inlineHelpText>Enter the member who performed this transaction.</inlineHelpText>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsOffline__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box for the transaction to be processed offline.</inlineHelpText>
        <label>Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__PointCost__c</fullName>
        <description>Result of Transaction Points multiplied by Point Cost established in Program.</description>
        <inlineHelpText>Enter actual cost, in the  currency of your choice, of a point in your program.</inlineHelpText>
        <label>Point Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Points__c</fullName>
        <description>Transaction Points.</description>
        <inlineHelpText>Enter the number of points produced by this transaction.</inlineHelpText>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicates whether the transaction was or not processed (read only field).</description>
        <inlineHelpText>Read only field.</inlineHelpText>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsReverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RevertedTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Read only field.</inlineHelpText>
        <label>Adjust Transaction</label>
        <referenceTo>FieloPLT__Transaction__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Reward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reward</label>
        <referenceTo>FieloPLT__Reward__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__SkipEngine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Engine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unapproved Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error in the Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transaction without Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Transaction purchase value.</description>
        <inlineHelpText>Enter the purchase value.</inlineHelpText>
        <label>Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>FieloPLT__All_Transactions</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Type__c</columns>
        <columns>FieloPLT__Value__c</columns>
        <columns>FieloPLT__MemberReadOnly__c</columns>
        <columns>FieloPLT__DateReadOnly__c</columns>
        <columns>FieloPLT__ApprovedReadOnly__c</columns>
        <columns>FieloPLT__ProcessedStatusReadOnly__c</columns>
        <columns>FieloPLT__StatusReadOnly__c</columns>
        <columns>FieloPLT__PointsReadOnly__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Transactions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloPLT__ByTypeCodeInsert</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Processed__c</columns>
        <columns>FieloPLT__Member__c</columns>
        <columns>FieloPLT__IdentificationType__c</columns>
        <columns>FieloPLT__MemberCode__c</columns>
        <columns>FieloPLT__Value__c</columns>
        <columns>FieloPLT__Points__c</columns>
        <columns>FieloPLT__Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloPLT__Type__c</field>
            <operation>equals</operation>
            <value>Code Insert</value>
        </filters>
        <label>By Type Code Insert</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloPLT__ByTypePurchase</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Processed__c</columns>
        <columns>FieloPLT__Member__c</columns>
        <columns>FieloPLT__Value__c</columns>
        <columns>FieloPLT__Points__c</columns>
        <columns>FieloPLT__Date__c</columns>
        <filterScope>Everything</filterScope>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloPLT__ByTypeReferralCompleteSignup</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Processed__c</columns>
        <columns>FieloPLT__Member__c</columns>
        <columns>FieloPLT__Value__c</columns>
        <columns>FieloPLT__Points__c</columns>
        <columns>FieloPLT__Date__c</columns>
        <filterScope>Everything</filterScope>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloPLT__ByTypeReferralSimpleSignup</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Processed__c</columns>
        <columns>FieloPLT__Member__c</columns>
        <columns>FieloPLT__Value__c</columns>
        <columns>FieloPLT__Points__c</columns>
        <columns>FieloPLT__Date__c</columns>
        <filterScope>Everything</filterScope>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloPLT__ByTypeRegistration</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Processed__c</columns>
        <columns>FieloPLT__Member__c</columns>
        <columns>FieloPLT__Value__c</columns>
        <columns>FieloPLT__Points__c</columns>
        <columns>FieloPLT__Date__c</columns>
        <filterScope>Everything</filterScope>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloPLT__ThisWeek</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Processed__c</columns>
        <columns>FieloPLT__Member__c</columns>
        <columns>FieloPLT__Value__c</columns>
        <columns>FieloPLT__Points__c</columns>
        <columns>FieloPLT__Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>This Week</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>FieloPLT__ValidateDateTime</fullName>
        <active>true</active>
        <description>Transaction date and time must be valid.</description>
        <errorConditionFormula>ISNULL(FieloPLT__Date__c)</errorConditionFormula>
        <errorDisplayField>FieloPLT__Date__c</errorDisplayField>
        <errorMessage>Transaction date and time must be valid.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__ValidateProcessedPoints</fullName>
        <active>true</active>
        <description>A processed Transaction can not have null points.</description>
        <errorConditionFormula>FieloPLT__Processed__c &amp;&amp; ISNULL(FieloPLT__Points__c)</errorConditionFormula>
        <errorDisplayField>FieloPLT__Points__c</errorDisplayField>
        <errorMessage>A processed Transaction can not have null points</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__ValidateTransactionType</fullName>
        <active>true</active>
        <errorConditionFormula>FieloPLT__Value__c != 0 &amp;&amp; ( ISPICKVAL(FieloPLT__Type__c, &apos;Code Insert&apos; ) || ISPICKVAL(FieloPLT__Type__c, &apos;Referral - Step 1&apos; ) || ISPICKVAL(FieloPLT__Type__c, &apos;Referral - Step 2&apos; ) || ISPICKVAL(FieloPLT__Type__c, &apos;Registration&apos; ) )</errorConditionFormula>
        <errorMessage>You must enter &quot;Purchase value = 0&quot; for transactions of types: Registration, Code insert, Referral - Simple signup, and Referral - Complete signup.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__ValidateTransactionValue</fullName>
        <active>false</active>
        <errorConditionFormula>FieloPLT__Value__c &lt;= 0 &amp;&amp; ISPICKVAL(FieloPLT__Type__c, &apos;Purchase&apos; )</errorConditionFormula>
        <errorDisplayField>FieloPLT__Value__c</errorDisplayField>
        <errorMessage>Value cannot be equal or less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloPLT__Validate_Member</fullName>
        <active>true</active>
        <errorConditionFormula>(FieloPLT__Member__c == null)</errorConditionFormula>
        <errorDisplayField>FieloPLT__Member__c</errorDisplayField>
        <errorMessage>You must choose a Member in the Member Field.</errorMessage>
    </validationRules>
</CustomObject>